[package]
name = "caching_proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.45.1", features = ["full"] }
hyper = { version = "1.6.0", features = ["full"] }
hyper-util = { version = "0.1.13", features = ["tokio", "client", "client-legacy", "http1"] }
clap = { version = "4.5.39", features = ["derive"] } 
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
lazy_static = "1.5.0"
dashmap = "6.1.0"
bytes = "1.10.1"
http-body-util = "0.1.3"
lru = "0.14.0"
reqwest = { version = "0.12.18", features = ["json", "cookies", "stream"] }
once_cell = "1.17.1"
warp = "0.3.7"
